// Copyright (c) 2023 RTX BBN Technologies Corp.

plugins {
	id 'java-library'
}

version = parliamentVersion

dependencies {
	api libs.sesame
	implementation project(':Parliament')
	implementation libs.slf4jApi
	testImplementation libs.logback
}

configurations.all {
	exclude group: 'xml-apis'
}

java {
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

task sourcesJar(type: Jar) {
	archiveClassifier = 'sources'
	from sourceSets.main.allSource
}

task javadocJar(type: Jar, dependsOn: javadoc) {
	archiveClassifier = 'javadoc'
	from javadoc.destinationDir
}

javadoc {
	source = sourceSets.main.allJava
	classpath = configurations.compileClasspath

	options
	{
		//setMemberLevel JavadocMemberLevel.PUBLIC
		//setAuthor true
		addStringOption('Xdoclint:-missing', '-quiet')
	}
}

tasks.named("assemble") {
	dependsOn(sourcesJar)
	dependsOn(javadocJar)
}

testing {
	suites {
		test {
			useJUnit()
		}
	}
}

test {
	systemProperty 'java.library.path', "${deployableDir}/bin"
}
